--- a/package.json
+++ b/package.json
@@ -17,8 +17,17 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/node": "^14.14.41",
+    "@types/validator": "^13.1.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
