--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/server.js",
+    "dev": "nodemon --watchAll 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec 'ts-node src/server.js' ",
     "test": "jest --watchAll --no-cache --detectOpenHandles"
   },
   "dependencies": {
